--- a/style.css
+++ b/style.css
@@ -119,3 +119,18 @@ html, body {
   background: rgba(255,255,255,0.85);
   border-radius: 10px;
 }
+.rect {
+  width: 150px;
+  height: 90px;
+  background: rgba(255,255,255,0.85);
+  border-radius: 10px;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  color: black;
+  font-weight: bold;
+  font-size: 1rem;
+  user-select: none;
+}
