--- a/style.css
+++ b/style.css
@@ -136,5 +136,6 @@ html, body {
 }
 /* Glow transition */
 #glowBtn {
-  transition: background-color 1s ease;
+  transition: background-color 1s ease, box-shadow 1s ease;
+  box-shadow: 0 0 0px rgba(0,0,0,0);
 }
