--- a/style.css
+++ b/style.css
@@ -129,13 +129,14 @@ html, body {
   user-select: none;
 }
 
-/* Glow transition */
+/* Glow transition (for glowBtn) */
 #glowBtn {
   transition: background-color 1s ease, box-shadow 1s ease;
   box-shadow: 0 0 0px rgba(0,0,0,0);
+  border: 3px solid white;
 }
 
-/* Rainbow flash when clicked */
+/* Rainbow flash when clicked (glowBtn) */
 @keyframes rainbowFlash {
   0% { border-color: red; }
   20% { border-color: orange; }
@@ -145,13 +146,7 @@ html, body {
   100% { border-color: magenta; }
 }
 
-/* Allow border transition */
-#glowBtn {
-  border: 3px solid white;
-  transition: background-color 1s ease, box-shadow 1s ease, border-color 0.2s ease;
-}
-
-/* Small constant vibration */
+/* Shake animations */
 @keyframes tinyShake {
   0% { transform: translate(0px, 0px) rotate(0deg); }
   25% { transform: translate(1px, -1px) rotate(-1deg); }
@@ -160,7 +155,6 @@ html, body {
   100% { transform: translate(0px, 0px) rotate(0deg); }
 }
 
-/* Bigger shake */
 @keyframes bigShake {
   0% { transform: translate(0, 0) rotate(0deg); }
   20% { transform: translate(-6px, 2px) rotate(-3deg); }
@@ -170,7 +164,6 @@ html, body {
   100% { transform: translate(0, 0) rotate(0deg); }
 }
 
-/* Hover = tiny shake */
 #shakeBtn:hover {
   animation: tinyShake 0.15s infinite linear;
 }
@@ -233,4 +226,9 @@ html, body {
 
 #colorBtn.clicked {
   animation: colorBurst 0.5s ease-out;
+}
+
+/* Optional simple styles for size & bounce placeholders */
+#sizeBtn, #bounceBtn {
+  /* keep default look for now */
 }
